# smart-etl-tech-test

./: .env.example  .gitignore  Descricao_KPIs.md  Descrição do teste técnico.md  Dicionario_de_Dados.md  Dicionário de Dados - Teste Técnico de Data & AI Engineering.docx  README.md  Teste Técnico de Data & AI Engineering.docx  pyproject.toml
.github/prompts/: plan-agenticDataPipeline.prompt.md
.github/workflows/: docs.yml
agents/: __init__.py  codegen_agent.py  llm_provider.py  monitor_agent.py  pipeline_agent.py  repair_agent.py
agents/tools/: __init__.py  data_tools.py  pipeline_tools.py  quality_tools.py  spec_tools.py  viz_tools.py
config/: __init__.py  databricks_notebook.py  llm_config.py  settings.py
core/: __init__.py  compute.py  events.py  storage.py
databricks/: RUNBOOK.md  push_secrets.py  setup_dbfs.py  setup_volumes.py
databricks/notebooks/: 01_bronze.py  02_silver.py  03_gold.py  04_agent_orchestrator.py  05_agentic_pipeline.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  conf.py  data-dictionary.md  databricks.md  index.md  kpis.md  overview.md  quickstart.md  testing.md
docs/api/: agents.md  config.md  core.md  monitoring.md  pipeline.md
frontend/: __init__.py  app.py  theme.py  viz_config.py
frontend/pages/: 0_configuracao.py  1_pipeline_monitor.py  2_agent_monitor.py  3_gold_dashboard.py  __init__.py
monitoring/: __init__.py  models.py  store.py
pipeline/: __init__.py  executor.py  orchestrator.py  specs.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
(+13 files in other folders)
