[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "pipeline", "agents", "monitoring"]

[project]
name = "agentic-pipeline"
version = "0.1.0"
description = "Pipeline de Transformação Agêntica de Dados - Medalion Architecture (Bronze → Silver → Gold)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Storage e Compute
    "deltalake>=0.18.0",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",

    # LLM e Agentes
    "litellm>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Configuração
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Frontend
    "streamlit>=1.35.0",
    "plotly>=5.22.0",

    # Utilitários
    "structlog>=24.0.0",
    "tenacity>=8.0.0",

    # databricks
    "databricks-sdk>=0.102.0",
]

[project.optional-dependencies]
databricks = [
    "pyspark>=3.5.0",
    "databricks-sdk>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
